--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,13 @@ compile-job:       # This job runs in the build stage, which runs first.
   script:
     - sbt compile
 
-pass-test: # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
+pass-test-job: # This job runs in the test stage.
+  stage: pass-test    # It only starts when the job in the build stage completes successfully.
   script:
     - sbt "testOnly wacc.DummyTestPass"
 
-#fail-test:			# Valid invalid etc etc
-#  stage: test
+#fail-test-job:			# Valid invalid etc etc
+#  stage: fail-test
 #  script:
 #    - sbt "testOnly wacc.DummyTestFail"
 
