--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,18 @@ stages:          # List of stages for jobs, and their order of execution
   - pass-test
   - fail-test
 
+before_script:
+  - apt-get update -y
+  - apt-get install -y csh
+  - apt-get install -y curl
+  - apt-get install -y gnupg
+  - echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
+  - curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | apt-key add
+  - apt-get update -y
+  - apt-get install -y default-jdk
+  - apt-get install -y sbt
+  - sbt sbtVersion
+
 compile-job:       # This job runs in the build stage, which runs first.
   stage: compile
   script:
