Tag tests, check pipeline still passes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,32 @@ compile-job:       # This job runs in the build stage, which runs first.
   script:
     - sbt compile
 
-pass-test-job: # This job runs in the test stage.
+#Including all jobs just for now to ensure it all works as expected
+
+expression-test-job: # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
-    - sbt test
+    - sbt "testOnly -- -n ExpressionTests"
 
+statement-test-job:
+  stage: test
+  script:
+    - sbt "testOnly -- -n StatementTests"
+
+lvalue-test-job:
+  stage: test
+  script:
+    - sbt "testOnly -- -n LValueTests"
+
+rvalue-test-job:
+  stage: test
+  script:
+    - sbt "testOnly -- -n RValueTests"
+
+all-syntactic-test-job:
+  stage: test
+  script:
+    - sbt "testOnly -- -n SyntacticTests"
 
 
 # Don't test everything
