Add semantic invalid tests, update .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,11 @@ all-syntax-invalid-tests:
   script:
     - sbt "testOnly -- -n ChecksAllSyntaxInvalid"
 
+all-semantic-invalid-tests:
+  stage: test
+  script:
+    - sbt "testOnly -- -n ChecksAllSemanticInvalid"
+
 
 
 
