--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,10 @@ extension-tests:
   script:
     - make
     - sbt "testOnly -- -n FullPairTypeTests"
+    - sbt "testOnly -- -n IfExprTests"
+    - sbt "testOnly -- -n InliningTests"
+    - sbt "testOnly -- -n StructTests"
+    - sbt "testOnly -- -n VoidTypeTests"
 
 # Don't test everything
 # Tag tests and use "PENDING" using scala test
